<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".MetodoPagoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/main_background"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/img_back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_left_arrow_inverse" />

            <TextView
                android:id="@+id/txt_pagar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="104dp"
                android:gravity="center"
                android:text="@string/tittle_metodo_pago"
                android:textColor="@color/main_user_background"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:layout_marginStart="18dp"
            android:text="@string/subtittle_metodo_pago"
            android:textColor="@color/main_user_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/ic_button_visa"
                android:contentDescription="@null"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:src="@drawable/ic_button_visa"
                android:elevation="44dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/ic_button_bcp"
                android:contentDescription="@null"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:src="@drawable/ic_button_bcp"
                android:elevation="44dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/ic_button_paypal"
                android:contentDescription="@null"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:src="@drawable/ic_button_paypal"
                android:elevation="44dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/ic_button_efectivo"
                android:contentDescription="@null"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:src="@drawable/ic_button_efectivo"
                android:elevation="44dp"
                android:padding="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"

        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_pago"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12sp"
            android:text="@string/tittle_titular"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_titular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titular" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12sp"
            android:text="@string/tittle_num"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_num_tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_ej" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12sp"
                    android:text="@string/tittle_fecha_vencimiento"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inputs">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_fecha_vencimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_fecha" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12sp"
                    android:text="@string/tittle_cvv"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inputs">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_cvv" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tittle_monto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/tittle_monto" />

                <TextView
                    android:id="@+id/txt_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/price_total" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tittle_detalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/tittle_detalle" />

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_right_arrow"
                    />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/button_text" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>