<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_user_background"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back_button"
            android:contentDescription="@null"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:src="@drawable/icon_back" />

        <ImageView
            android:id="@+id/img_cart"
            android:contentDescription="@null"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="284dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_cart" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/name_product"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/price_product"
            android:textAlignment="center"
            android:textColor="@color/icons_background"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_product"
            android:contentDescription="@null"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/main_user_background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_button_add"
                android:contentDescription="@null"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:id="@+id/txt_cant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/product_cant"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_button_minus"
                android:contentDescription="@null"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_minus" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="28dp"
            android:text="@string/description_product"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="18dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/icons_background"
            android:text="@string/button_add_cart"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>